package sauvegarde;

/**Ecoute lorsqu'une sauvegarde est effectuée. */
public interface SaveListener {
    void onSave();
} 